--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
-    <link rel="icon" href="./images/favicon.ico" type="image/x-con"/>
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-con" />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
   </head>
   <body class="page">
     <header class="header clamp-witdh">
@@ -29,7 +29,7 @@
             </h3>
           </div>
           <div class="card__img">
-            <label class="card__label"><h4>&lt;/HTML&gt;</h4></label>
+            <div class="card__label"><h4>&lt;/HTML&gt;</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -71,7 +71,7 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
@@ -82,7 +82,7 @@
             <h3 class="card__title-text">1 спринт: Я — чистый лист</h3>
           </div>
           <div class="card__img">
-            <label class="card__label"><h4>&lt;/HTML&gt;</h4></label>
+            <div class="card__label"><h4>&lt;/HTML&gt;</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -127,7 +127,7 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
@@ -138,7 +138,7 @@
             <h3 class="card__title-text">1 спринт: А если не получится?</h3>
           </div>
           <div class="card__img">
-            <label class="card__label"><h4>&lt;CSS&gt;</h4></label>
+            <div class="card__label"><h4>&lt;CSS&gt;</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -180,7 +180,7 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
@@ -191,7 +191,7 @@
             <h3 class="card__title-text">2 спринт: Погоня за идеалом</h3>
           </div>
           <div class="card__img">
-            <label class="card__label"><h4>&lt;desigions&gt;</h4></label>
+            <div class="card__label"><h4>&lt;desigions&gt;</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -235,7 +235,7 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
@@ -246,7 +246,7 @@
             <h3 class="card__title-text">2 спринт: О тех, кто рядом</h3>
           </div>
           <div class="card__img">
-            <label class="card__label"><h4>care</h4></label>
+            <div class="card__label"><h4>care</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -291,7 +291,7 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
@@ -302,7 +302,7 @@
             <h3 class="card__title-text">3 спринт: Обходные стратегии</h3>
           </div>
           <div class="card__img">
-            <label class="card__label"><h4>&lt;support&gt;</h4></label>
+            <div class="card__label"><h4>&lt;support&gt;</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -344,7 +344,7 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
@@ -355,9 +355,7 @@
             <h3 class="card__title-text">3 спринт: Когда опускаются руки</h3>
           </div>
           <div class="card__img">
-            <label class="card__label"
-              ><h4>&lt;lifes-style: none;&gt;</h4></label
-            >
+            <div class="card__label"><h4>&lt;lifes-style: none;&gt;</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -401,7 +399,7 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
@@ -412,7 +410,7 @@
             <h3 class="card__title-text">«Сейчас я здесь»</h3>
           </div>
           <div class="card__img">
-            <label class="card__label"><h4>&lt;experience&gt;</h4></label>
+            <div class="card__label"><h4>&lt;experience&gt;</h4></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -460,12 +458,37 @@
                 <path d="M15 21H12V24H15V21Z" fill="black" />
               </svg>
 
-              <span class="button__text">Like</span>
+              <span class="button button-card button__text">Like</span>
             </button>
           </div>
         </article>
       </section>
     </main>
+    <dialog class="modal-window" id="modal-window">
+      <div class="modal-window__text-block">
+        <svg class="floppy-icon" width="28" height="28">
+          <use href="./svg/icons.svg#floppy"></use>
+        </svg>
+        <p class="modal-window__text">Вставьте дискету, чтобы продолжить</p>
+      </div>
+      <button
+        class="button button-modal"
+        onclick="window['modal-window'].close()"
+      >
+        ОК
+      </button>
+    </dialog>
+    <footer class="footer">
+      <button
+        class="button button-footer button__text"
+        onclick="window['modal-window'].show()"
+      >
+        <svg class="floppy-icon" width="28" height="28">
+          <use href="./svg/icons.svg#floppy"></use>
+        </svg>
+        <span>Сохранить на память</span>
+      </button>
+    </footer>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
