--- a/index.html
+++ b/index.html
@@ -466,7 +466,11 @@
     </main>
     <dialog class="modal-window" id="modal-window">
       <div class="modal-window__text-block">
-        <svg class="floppy-icon" width="39" height="39">
+        <svg
+          class="modal-window__floppy-icon floppy-icon"
+          width="39"
+          height="39"
+        >
           <use href="./svg/icons.svg#floppy"></use>
         </svg>
         <p class="modal-window__text">Вставьте дискету, чтобы продолжить</p>
