--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <header class="header clamp-witdh">
       <div class="header__logo">
         <h1 class="header__title">&lt;/HTML&gt;</h1>
-        <h2 class="header__subtitle">закрывающий тег</h2>
+        <h1 class="header__subtitle">закрывающий тег</h1>
       </div>
     </header>
     <main class="main">
-      <section class="zero-sprint clamp-witdh">
+      <section class="preparing-for-work clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">
+            <h2 class="card__title-text">
               Фритрек и нулевой спринт: Подготовка к работе
-            </h3>
+            </h2>
           </div>
           <div class="card__img">
             <img
@@ -34,7 +34,7 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>&lt;/HTML&gt;</h4></div>
+            <div class="card__label"><span>&lt;/HTML&gt;</span></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -46,7 +46,7 @@
               <p>Место для ваших воспоминаний о начале обучения.</p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -79,17 +79,20 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
           </div>
         </article>
       </section>
-      <section class="first-sprint-blank-slate clamp-witdh">
+      <section class="blank-slate clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">1 спринт: Я — чистый лист</h3>
+            <h2 class="card__title-text">1 спринт: Я — чистый лист</h2>
           </div>
           <div class="card__img">
             <img
@@ -97,7 +100,7 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>&lt;/HTML&gt;</h4></div>
+            <div class="card__label"><span>&lt;/HTML&gt;</span></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -112,7 +115,7 @@
               <p>Место для ваших воспоминаний о начале первого спринта.</p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -145,17 +148,20 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
           </div>
         </article>
       </section>
-      <section class="first-sprint-doubts clamp-witdh">
+      <section class="doubts clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">1 спринт: А если не получится?</h3>
+            <h2 class="card__title-text">1 спринт: А если не получится?</h2>
           </div>
           <div class="card__img">
             <img
@@ -163,7 +169,7 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>&lt;CSS&gt;</h4></div>
+            <div class="card__label"><span>&lt;CSS&gt;</span></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -175,7 +181,7 @@
               <p>Место для ваших воспоминаний об окончании первого спринта.</p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -208,17 +214,20 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
           </div>
         </article>
       </section>
-      <section class="second-sprint-the-ideal clamp-witdh">
+      <section class="the-ideal clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">2 спринт: Погоня за идеалом</h3>
+            <h2 class="card__title-text">2 спринт: Погоня за идеалом</h2>
           </div>
           <div class="card__img">
             <img
@@ -226,7 +235,7 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>&lt;desigions&gt;</h4></div>
+            <div class="card__label"><span>&lt;desigions&gt;</span></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -240,7 +249,7 @@
               <p>Место для ваших воспоминаний о начале второго спринта.</p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -273,17 +282,20 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
           </div>
         </article>
       </section>
-      <section class="second-sprint-who-nearby clamp-witdh">
+      <section class="who-nearby clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">2 спринт: О тех, кто рядом</h3>
+            <h2 class="card__title-text">2 спринт: О тех, кто рядом</h2>
           </div>
           <div class="card__img">
             <img
@@ -291,7 +303,7 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>care</h4></div>
+            <div class="card__label"><span>care</span></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -306,7 +318,7 @@
               <p>Место для ваших воспоминаний об окончании второго спринта.</p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -339,17 +351,20 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
           </div>
         </article>
       </section>
-      <section class="third-sprint-workaround-strategies clamp-witdh">
+      <section class="workaround-strategies clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">3 спринт: Обходные стратегии</h3>
+            <h2 class="card__title-text">3 спринт: Обходные стратегии</h2>
           </div>
           <div class="card__img">
             <img
@@ -357,7 +372,7 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>&lt;support&gt;</h4></div>
+            <div class="card__label"><span>&lt;support&gt;</span></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -369,7 +384,7 @@
               <p>Место для ваших воспоминаний о начале третьего спринта.</p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -402,17 +417,20 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
           </div>
         </article>
       </section>
-      <section class="third-sprint-when-you-give-up clamp-witdh">
+      <section class="when-you-give-up clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">3 спринт: Когда опускаются руки</h3>
+            <h2 class="card__title-text">3 спринт: Когда опускаются руки</h2>
           </div>
           <div class="card__img">
             <img
@@ -420,7 +438,9 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>&lt;lifes-style: none;&gt;</h4></div>
+            <div class="card__label">
+              <span>&lt;lifes-style: none;&gt;</span>
+            </div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -434,7 +454,7 @@
               <p>Место для ваших воспоминаний об окончании третьего спринта.</p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -467,7 +487,10 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -477,7 +500,7 @@
       <section class="i-here-now clamp-witdh">
         <article class="card">
           <div class="card__title">
-            <h3 class="card__title-text">«Сейчас я здесь»</h3>
+            <h2 class="card__title-text">«Сейчас я здесь»</h2>
           </div>
           <div class="card__img">
             <img
@@ -485,7 +508,7 @@
               src="./images/FoodTruckHtml.png"
               alt="Фудтрак"
             />
-            <div class="card__label"><h4>&lt;experience&gt;</h4></div>
+            <div class="card__label"><span>&lt;experience&gt;</span></div>
           </div>
           <div class="card__footer">
             <div class="card__description">
@@ -503,7 +526,7 @@
               </p>
             </div>
             <div class="card__buttons">
-              <button class="card__icon-button">
+              <button type="button" class="card__icon-button">
                 <svg
                   class="like-icon"
                   width="39"
@@ -536,41 +559,48 @@
                   />
                 </svg>
               </button>
-              <button class="button card__like-button button-card">
+              <button
+                type="button"
+                class="button card__like-button button-card"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
           </div>
         </article>
       </section>
-    </main>
-    <dialog class="modal-window" id="modal-window">
-      <div class="modal-window__text-block">
-        <div class="modal-window__floppy-icon">
-          <svg class="floppy-icon" width="39" height="39">
+      <section class="save-on-disk clamp-witdh">
+        <button
+          type="button"
+          class="save-on-disk__button button button__text"
+          onclick="window['modal-window'].showModal()"
+        >
+          <svg
+            class="save-on-disk__floppy-icon floppy-icon"
+            width="28"
+            height="28"
+          >
             <use href="./svg/icons.svg#floppy"></use>
           </svg>
+          <span>Сохранить на память</span>
+        </button>
+      </section>
+    </main>
+    <dialog class="modal-window" id="modal-window">
+      <form class="modal-window__form" method="dialog">
+        <div class="modal-window__text-block">
+          <div class="modal-window__floppy-icon">
+            <svg class="floppy-icon" width="39" height="39">
+              <use href="./svg/icons.svg#floppy"></use>
+            </svg>
+          </div>
+          <p class="modal-window__text">Вставьте дискету, чтобы продолжить</p>
         </div>
-        <p class="modal-window__text">Вставьте дискету, чтобы продолжить</p>
-      </div>
-      <button
-        class="button button-modal"
-        onclick="window['modal-window'].close()"
-      >
-        <span>ОК</span>
-      </button>
+        <button type="submit" class="button button-modal">
+          <span>ОК</span>
+        </button>
+      </form>
     </dialog>
-    <footer class="footer">
-      <button
-        class="button button-footer button__text"
-        onclick="window['modal-window'].showModal()"
-      >
-        <svg class="floppy-icon__footer floppy-icon" width="28" height="28">
-          <use href="./svg/icons.svg#floppy"></use>
-        </svg>
-        <span> Сохранить на память</span>
-      </button>
-    </footer>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
