--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body class="page">
     <header class="header clamp-witdh">
       <div class="header__logo">
-        <h1 class="header__title">&lt;/HTML&gt;</h1>
+        <a class="header__link" href="#"
+          ><p class="header__title">&lt;/HTML&gt;</p></a
+        >
         <h1 class="header__subtitle">закрывающий тег</h1>
       </div>
     </header>
